force-app/main/default/objects/Work_Assignment__c/fields/Loan_Number_Primary__c.field-meta.xml
<CustomField>
    <fullName>Loan_Number_Primary__c</fullName>
    <description>Previous Primary Account Number.  Because this is a formula field we cant search by this field. Please don&apos;t add this field in any Page Layout, this is used for only the backend and CSV export purposes.</description>
    <formula>Product__r.Previous_Primary_Account_Number__c</formula>
    <inlineHelpText>Previous Primary Account Number</inlineHelpText>
    <label>Loan Number Primary</label>
    <type>Text</type>
</CustomField>