force-app/main/default/objects/Work_Assignment__c/fields/Next_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_Up_Date__c</fullName>
    <description>Next Follow-Up Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Next Follow-Up Date</inlineHelpText>
    <label>Next Follow-Up Date</label>
    <type>Date</type>
</CustomField>