force-app/main/default/objects/Work_Assignment__c/fields/Normal_High__c.field-meta.xml
<CustomField>
    <fullName>Normal_High__c</fullName>
    <description>Normal/High</description>
    <formula>&apos; &apos;</formula>
    <inlineHelpText>Normal/High</inlineHelpText>
    <label>Normal/High</label>
    <type>Text</type>
</CustomField>