force-app/main/default/objects/Work_Assignment__c/fields/Note_Lines__c.field-meta.xml
<CustomField>
    <fullName>Note_Lines__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Note Lines</description>
    <inlineHelpText>Note Lines</inlineHelpText>
    <label>Note Lines</label>
    <type>Checkbox</type>
</CustomField>