force-app/main/default/objects/Work_Assignment__c/fields/Note_Lines_Chargeable_Media__c.field-meta.xml
<CustomField>
    <fullName>Note_Lines_Chargeable_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Note Lines Chargeable Media</description>
    <inlineHelpText>Note Lines Chargeable Media</inlineHelpText>
    <label>Note Lines Chargeable Media</label>
    <type>Checkbox</type>
</CustomField>