force-app/main/default/objects/Work_Assignment__c/fields/Note_Lines_Frml__c.field-meta.xml
<CustomField>
    <fullName>Note_Lines_Frml__c</fullName>
    <description>Checks whether the work assignment is for Note Lines. This field is used for media report.</description>
    <formula>(IF(Note_Lines__c = True, &quot;Yes&quot;, &quot;No&quot;))</formula>
    <inlineHelpText>Checks whether the work assignment is for Note Lines. This field is used for media report.</inlineHelpText>
    <label>Note Lines</label>
    <type>Text</type>
</CustomField>