force-app/main/default/objects/Work_Assignment__c/fields/Note_Lines_Status__c.field-meta.xml
<CustomField>
    <fullName>Note_Lines_Status__c</fullName>
    <description>Note Lines Status</description>
    <inlineHelpText>Note Lines Status</inlineHelpText>
    <label>Note Lines Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>