force-app/main/default/objects/Work_Assignment__c/fields/Notification_Message__c.field-meta.xml
<CustomField>
    <fullName>Notification_Message__c</fullName>
    <description>Notification Message to be sent to Portal with Work Assignment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Notification Message to be sent to Portal with Work Assignment</inlineHelpText>
    <label>Notification Message</label>
    <length>50</length>
    <type>Text</type>
</CustomField>