force-app/main/default/objects/Work_Assignment__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <description>Notification Type of Work Assignment for Agency</description>
    <inlineHelpText>Notification Type of Work Assignment for Agency</inlineHelpText>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Payment</fullName>
            </value>
            <value>
                <fullName>Agency Payment</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Recalled Account</fullName>
            </value>
            <value>
                <fullName>Transactions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>