force-app/main/default/objects/Work_Assignment__c/fields/Number_Of_Days_Since_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Days_Since_Last_Modified__c</fullName>
    <description>Number Of Days Since Last Modified</description>
    <formula>LastModifiedDate - DATETIMEVALUE( TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Days Since Last Modified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>