force-app/main/default/objects/Work_Assignment__c/fields/Original_Creditor__c.field-meta.xml
<CustomField>
    <fullName>Original_Creditor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Creditor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>