force-app/main/default/objects/Work_Assignment__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Other</description>
    <inlineHelpText>Other</inlineHelpText>
    <label>Other</label>
    <type>Checkbox</type>
</CustomField>