force-app/main/default/objects/Work_Assignment__c/fields/Other_Chargeable_Media__c.field-meta.xml
<CustomField>
    <fullName>Other_Chargeable_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Note Lines Chargeable Media</description>
    <label>Other Chargeable Media</label>
    <type>Checkbox</type>
</CustomField>