force-app/main/default/objects/Work_Assignment__c/fields/Other_Frml__c.field-meta.xml
<CustomField>
    <fullName>Other_Frml__c</fullName>
    <description>Checks whether the work assignment is for Other media. This field is used for media report.</description>
    <formula>(IF( Other__c = True, &quot;Yes&quot;, &quot;No&quot;))</formula>
    <inlineHelpText>Checks whether the work assignment is for Other media. This field is used for media report.</inlineHelpText>
    <label>Other</label>
    <type>Text</type>
</CustomField>