force-app/main/default/objects/Work_Assignment__c/fields/Other_Media_Request__c.field-meta.xml
<CustomField>
    <fullName>Other_Media_Request__c</fullName>
    <description>Other Media Request</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Other Media Request</inlineHelpText>
    <label>Other Media Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>