force-app/main/default/objects/Work_Assignment__c/fields/Other_Media_Request_Chargeable_Media__c.field-meta.xml
<CustomField>
    <fullName>Other_Media_Request_Chargeable_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Other Media Request Chargeable Media</description>
    <inlineHelpText>Other Media Request Chargeable Media</inlineHelpText>
    <label>Other Media Request Chargeable Media</label>
    <type>Checkbox</type>
</CustomField>