force-app/main/default/objects/Work_Assignment__c/fields/Other_Media_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Other_Media_Request_Status__c</fullName>
    <description>Other Media Request Status</description>
    <inlineHelpText>Other Media Request Status</inlineHelpText>
    <label>Other Media Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>