force-app/main/default/objects/Work_Assignment__c/fields/Outbound_API_Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Outbound_API_Request_Body__c</fullName>
    <description>Outbound API Request Body</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Outbound API Request Body</inlineHelpText>
    <label>Outbound API Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>