force-app/main/default/objects/Work_Assignment__c/fields/Outbound_API_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Outbound_API_Response_Body__c</fullName>
    <description>Outbound API Response Body</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Outbound API Response Body</inlineHelpText>
    <label>Outbound API Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>