force-app/main/default/objects/Work_Assignment__c/fields/Placement_Agency__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Placement Agency</inlineHelpText>
    <label>Agency ID</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Work Assignments</relationshipLabel>
    <relationshipName>Work_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>