force-app/main/default/objects/Work_Assignment__c/fields/Placement_Agency_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agency_Identifier__c</fullName>
    <description>Placement Agency Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>This field is used for Distressed Account</inlineHelpText>
    <label>Placement Agency Identifier</label>
    <length>25</length>
    <type>Text</type>
</CustomField>