force-app/main/default/objects/Work_Assignment__c/fields/Placement_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agency_Name__c</fullName>
    <formula>Placement_Agency__r.Agency_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Name</label>
    <type>Text</type>
</CustomField>