force-app/main/default/objects/Work_Assignment__c/fields/PPSA_Registration__c.field-meta.xml
<CustomField>
    <fullName>PPSA_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PPSA Registration</description>
    <inlineHelpText>PPSA Registration</inlineHelpText>
    <label>PPSA Registration</label>
    <type>Checkbox</type>
</CustomField>