force-app/main/default/objects/Work_Assignment__c/fields/PPSA_Registration_Chargeable_Media__c.field-meta.xml
<CustomField>
    <fullName>PPSA_Registration_Chargeable_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PPSA Registration Chargeable Media</description>
    <inlineHelpText>PPSA Registration Chargeable Media</inlineHelpText>
    <label>PPSA Registration Chargeable Media</label>
    <type>Checkbox</type>
</CustomField>