force-app/main/default/objects/Work_Assignment__c/fields/PPSA_Registration_Frml__c.field-meta.xml
<CustomField>
    <fullName>PPSA_Registration_Frml__c</fullName>
    <description>Checks whether the work assignment is for PPSA Registration. This field is used for media report.</description>
    <formula>(IF( PPSA_Registration__c = True, &quot;Yes&quot;, &quot;No&quot;))</formula>
    <inlineHelpText>Checks whether the work assignment is for PPSA Registration. This field is used for media report.</inlineHelpText>
    <label>PPSA Registration</label>
    <type>Text</type>
</CustomField>