force-app/main/default/objects/Work_Assignment__c/fields/PPSA_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>PPSA_Registration_Status__c</fullName>
    <description>PPSA Registration Status</description>
    <inlineHelpText>PPSA Registration Status</inlineHelpText>
    <label>PPSA Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>