force-app/main/default/objects/Work_Assignment__c/fields/Primary_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_Number__c</fullName>
    <description>Using this field we can search Primary Account Number in media</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>This field is used for the searchable purpose</inlineHelpText>
    <label>Primary Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>