force-app/main/default/objects/Work_Assignment__c/fields/Product_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Product_Identifier__c</fullName>
    <description>Product_Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Product_Identifier</inlineHelpText>
    <label>Product_Identifier</label>
    <length>25</length>
    <type>Text</type>
</CustomField>