force-app/main/default/objects/Work_Assignment__c/fields/Products_List__c.field-meta.xml
<CustomField>
    <fullName>Products_List__c</fullName>
    <description>List of products not assigned to the agency.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>List of products not assigned to the agency.</inlineHelpText>
    <label>Account List</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>