force-app/main/default/objects/Work_Assignment__c/fields/Record_Type_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Identifier__c</fullName>
    <description>Record_Type_Identifier	- name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Record_Type_Identifier	- name</inlineHelpText>
    <label>Record_Type_Identifier</label>
    <length>25</length>
    <type>Text</type>
</CustomField>