force-app/main/default/objects/Work_Assignment__c/fields/Reopen_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Comments__c</fullName>
    <description>Reopen Comments</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Reopen Comments</inlineHelpText>
    <label>Reopen Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>