force-app/main/default/objects/Work_Assignment__c/fields/Repo_And_Auction_Doc_Chargeable_Media__c.field-meta.xml
<CustomField>
    <fullName>Repo_And_Auction_Doc_Chargeable_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Repossession AndAuctionDocChargAbleMedia</description>
    <inlineHelpText>Repossession And Auction Document Chargeable Media</inlineHelpText>
    <label>Repo And Auction Doc Chargeable Media</label>
    <type>Checkbox</type>
</CustomField>