force-app/main/default/objects/Work_Assignment__c/fields/Repossession_And_Auction_Documents__c.field-meta.xml
<CustomField>
    <fullName>Repossession_And_Auction_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Repossession And Auction Documents</description>
    <inlineHelpText>Repossession And Auction Documents</inlineHelpText>
    <label>Repossession And Auction Documents</label>
    <type>Checkbox</type>
</CustomField>