force-app/main/default/objects/Work_Assignment__c/fields/Repossession_And_Auction_Documents_Frml__c.field-meta.xml
<CustomField>
    <fullName>Repossession_And_Auction_Documents_Frml__c</fullName>
    <description>Checks whether the work assignment is for Repossession And Auction Documents. This field is used for media report.</description>
    <formula>(IF( Repossession_And_Auction_Documents__c = True, &quot;Yes&quot;, &quot;No&quot;))</formula>
    <inlineHelpText>Checks whether the work assignment is for Repossession And Auction Documents. This field is used for media report.</inlineHelpText>
    <label>Repossession And Auction Documents</label>
    <type>Text</type>
</CustomField>