force-app/main/default/objects/Work_Assignment__c/fields/Repossession_And_Auction_DocumentsStatus__c.field-meta.xml
<CustomField>
    <fullName>Repossession_And_Auction_DocumentsStatus__c</fullName>
    <description>Repossession And Auction DocumentsStatus</description>
    <inlineHelpText>Repossession And Auction Documents Status</inlineHelpText>
    <label>Repossession And Auction DocumentsStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>