force-app/main/default/objects/Work_Assignment__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Requested Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Requested Date</inlineHelpText>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>