force-app/main/default/objects/Work_Assignment__c/fields/Resolution_By__c.field-meta.xml
<CustomField>
    <fullName>Resolution_By__c</fullName>
    <description>Resolution By</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Resolution By</inlineHelpText>
    <label>Resolution By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>