force-app/main/default/objects/Work_Assignment__c/fields/Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolution Date</label>
    <type>Date</type>
</CustomField>