force-app/main/default/objects/Work_Assignment__c/fields/Resolution_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Timeline__c</fullName>
    <description>Resolution Timeline</description>
    <formula>Resolution_Date__c - Date_Complaint_Received_By_Agency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Resolution Timeline</inlineHelpText>
    <label>Resolution Timeline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>