force-app/main/default/objects/Work_Assignment__c/fields/Result_of_Investigation_Internal__c.field-meta.xml
<CustomField>
    <fullName>Result_of_Investigation_Internal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Result of Investigation Internal</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>