force-app/main/default/objects/Work_Assignment__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alleging Fraudulent Account</fullName>
            </value>
            <value>
                <fullName>Alleging Contacting Wrong Consumer</fullName>
            </value>
            <value>
                <fullName>Alleging Incorrect Credit Bureau Reporting</fullName>
            </value>
            <value>
                <fullName>Alleging Account Settled Prior / Paid Prior</fullName>
            </value>
            <value>
                <fullName>Alleging Debt Invalid / Incorrect Balance / Requesting Proof of Debt</fullName>
            </value>
            <value>
                <fullName>Alleging Breach of Collection Laws / Improper Collector Actions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Better Business Bureau</fullName>
                <isActive>false</isActive>
                <label>Better Business Bureau</label>
            </value>
            <value>
                <fullName>Credit Bureau</fullName>
                <isActive>false</isActive>
                <label>Credit Bureau</label>
            </value>
            <value>
                <fullName>Letter from lawyer / law firm / paralegal</fullName>
                <isActive>false</isActive>
                <label>Letter from lawyer / law firm / paralegal</label>
            </value>
            <value>
                <fullName>Ministry</fullName>
                <isActive>false</isActive>
                <label>Ministry</label>
            </value>
            <value>
                <fullName>Verbal</fullName>
                <isActive>false</isActive>
                <label>Verbal</label>
            </value>
            <value>
                <fullName>Written</fullName>
                <isActive>false</isActive>
                <label>Written</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>