force-app/main/default/objects/Work_Assignment__c/fields/Root_Cause_Other__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Root Cause Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>