force-app/main/default/objects/Work_Assignment__c/fields/Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date__c</fullName>
    <description>Purchase Date</description>
    <formula>Product__r.Purchase_Date_Formula__c</formula>
    <inlineHelpText>Purchase Date</inlineHelpText>
    <label>Sale Date</label>
    <type>Date</type>
</CustomField>