force-app/main/default/objects/Work_Assignment__c/fields/Settlement__c.field-meta.xml
<CustomField>
    <fullName>Settlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Settlement</description>
    <inlineHelpText>Settlement</inlineHelpText>
    <label>Settlement ID</label>
    <referenceTo>Settlement__c</referenceTo>
    <relationshipLabel>Work Assignments</relationshipLabel>
    <relationshipName>Work_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>