force-app/main/default/objects/Work_Assignment__c/fields/Settlement_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Identifier__c</fullName>
    <description>Settlement_Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Settlement_Identifier</inlineHelpText>
    <label>Settlement_Identifier</label>
    <length>25</length>
    <type>Text</type>
</CustomField>