force-app/main/default/objects/Work_Assignment__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>Source</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CFG</fullName>
                <default>true</default>
                <label>CFG</label>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>