force-app/main/default/objects/Work_Assignment__c/fields/Statements__c.field-meta.xml
<CustomField>
    <fullName>Statements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Statements</description>
    <inlineHelpText>Statements</inlineHelpText>
    <label>Statements</label>
    <type>Checkbox</type>
</CustomField>