force-app/main/default/objects/Work_Assignment__c/fields/Statements_Chargeable_Media__c.field-meta.xml
<CustomField>
    <fullName>Statements_Chargeable_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Statements Chargeable Media</description>
    <inlineHelpText>Statements Chargeable Media</inlineHelpText>
    <label>Statements Chargeable Media</label>
    <type>Checkbox</type>
</CustomField>