force-app/main/default/objects/Work_Assignment__c/fields/Statements_Frml__c.field-meta.xml
<CustomField>
    <fullName>Statements_Frml__c</fullName>
    <description>Checks whether the work assignment is for Statements. This field is used for media report.</description>
    <formula>(IF(Statements__c = True, &quot;Yes&quot;, &quot;No&quot;))</formula>
    <inlineHelpText>Checks whether the work assignment is for Statements. This field is used for media report.</inlineHelpText>
    <label>Statements</label>
    <type>Text</type>
</CustomField>