force-app/main/default/objects/Work_Assignment__c/fields/Statements_Status__c.field-meta.xml
<CustomField>
    <fullName>Statements_Status__c</fullName>
    <description>Statements Status</description>
    <inlineHelpText>Statements Status</inlineHelpText>
    <label>Statements Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>