force-app/main/default/objects/Work_Assignment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status</description>
    <inlineHelpText>Status</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>In Progress - Pending Agency Action</fullName>
            </value>
            <value>
                <fullName>In Progress - Pending CFG Action</fullName>
            </value>
            <value>
                <fullName>Completed – Agency Confirms Complaint Resolved</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed - Justified</fullName>
            </value>
            <value>
                <fullName>Closed - Unjustified</fullName>
            </value>
            <value>
                <fullName>Request to Reopen</fullName>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
            <value>
                <fullName>Closed - Unjustified - Cease and Desist Request</fullName>
            </value>
            <value>
                <fullName>Unjustified - Cease and Desist - Active</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>